[gd_scene load_steps=7 format=3 uid="uid://dglyi0fw0ieqc"]

[ext_resource type="Script" path="res://scenes/levels/level4/dialogue_level4/know_meph_hoardaxia.gd" id="1_54sxw"]
[ext_resource type="Texture2D" uid="uid://beaeikimgqcck" path="res://scenes/levels/level4/assets/Greed_BG.png" id="2_u2hgy"]
[ext_resource type="PackedScene" uid="uid://du27okwwc4ijj" path="res://scenes/levels/level4/characters/hoardaxia.tscn" id="3_oyqu1"]
[ext_resource type="AudioStream" uid="uid://cmclhc2jglc6" path="res://scenes/levels/level3/audio_level3/cave-temple-atmo-orchestral-drone-thriller-9357.mp3" id="4_tqxgn"]

[sub_resource type="SystemFont" id="SystemFont_jy5gg"]
font_names = PackedStringArray("Liberation Serif")

[sub_resource type="SystemFont" id="SystemFont_iiuqr"]
font_names = PackedStringArray("Liberation Serif")

[node name="KnowMephHoardaxia" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 500.0
offset_top = 320.0
offset_right = 500.0
offset_bottom = 320.0
size_flags_horizontal = 4
script = ExtResource("1_54sxw")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -572.0
offset_top = -320.0
offset_right = 595.0
offset_bottom = 328.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u2hgy")

[node name="Hoardaxia" parent="." instance=ExtResource("3_oyqu1")]
position = Vector2(-249, 197)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -496.0
offset_top = -320.0
offset_right = 500.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Hoardaxia_Speech" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_jy5gg")
theme_override_font_sizes/font_size = 32
text = "Some activists crashed one of my meet and greets, totally enraged. Chaos erupted, and in the frenzy, I got trampled. When I woke up here in Hell, the big boss found me and pitched me a deal of a deathtime: a nice chunk of cash to keep doing what I did up there, but down here."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Seperator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator5" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator6" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator7" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator8" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator9" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator10" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator11" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator12" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator13" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator14" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator15" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator16" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator17" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator18" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator19" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Question1_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_iiuqr")
theme_override_font_sizes/font_size = 24
text = "DO YOU LIKE THE CIRCUS?"

[node name="Seperator20" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Question2_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_iiuqr")
theme_override_font_sizes/font_size = 24
text = "WOULD YOU LEAVE THE CIRCUS?"

[node name="Level3Background" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_tqxgn")
autoplay = true
